Comment most of c2rust out from the workspace
Until we merge the new syn changes to build with a recent nightly, we
can just not build c2rust while working on the dynamic instrumentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [workspace]
 members = [
-    "c2rust",
-    "c2rust-transpile",
-    "c2rust-refactor",
-    "c2rust-ast-builder",
-    "c2rust-ast-exporter",
-    "c2rust-ast-printer",
-    "manual/preprocessors",
+    # "c2rust",
+    # "c2rust-transpile",
+    # "c2rust-refactor",
+    # "c2rust-ast-builder",
+    # "c2rust-ast-exporter",
+    # "c2rust-ast-printer",
+    # "manual/preprocessors",
     "analysis/runtime",
-    "c2rust-bitfields",
-    "c2rust-macros",
-    "c2rust-asm-casts",
+    # "c2rust-bitfields",
+    # "c2rust-macros",
+    # "c2rust-asm-casts",
 ]
 exclude = [
     "cross-checks/pointer-tracer",
