Add initial dynamic instrumentation
Adds an instrumentation tool to hook function calls. This is based on
Stuart's MIR-MIR rewriting prototype, but with the instrumentation from
the previous c2rust-refactor instrumentation tool.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     # "c2rust-ast-printer",
     # "manual/preprocessors",
     "analysis/runtime",
+    "dynamic_instrumentation",
     # "c2rust-bitfields",
     # "c2rust-macros",
     # "c2rust-asm-casts",
