--- a/dynamic_instrumentation/Cargo.toml
+++ b/dynamic_instrumentation/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
+bincode = "1.3"
 c2rust-analysis-rt = { path = "../analysis/runtime"}
 indexmap = "1.8"
 lazy_static = "1.4"
