prettyplease: remove nested workspace from Cargo.toml
only one Cargo.toml file in a workspace may have a [workspace] section

--- a/prettyplease/Cargo.toml
+++ b/prettyplease/Cargo.toml
@@ -18,5 +18,5 @@ syn = { version = "1.0.85", default-features = false, features = ["full"] }
 [dev-dependencies]
 syn = { version = "1.0.85", default-features = false, features = ["parsing"] }
 
-[workspace]
-members = ["examples/update"]
+#[workspace]
+#members = ["examples/update"]
