enable "visit-mut" syn feature
this is used to traverse the AST and reinsert comments at the right positions

--- a/c2rust-transpile/Cargo.toml
+++ b/c2rust-transpile/Cargo.toml
@@ -20,7 +20,7 @@ serde_json = "1.0"
 serde_derive = "1.0.80"
 serde_bytes = "0.11"
 serde_bencode = "0.2"
-syn = { version = "1.0", features = ["full", "parsing", "printing"]}
+syn = { version = "1.0", features = ["full", "parsing", "printing", "visit-mut"]}
 proc-macro2 = "1.0"
 indexmap = { version = "1.0.1", features = ["serde-1"] }
 c2rust-ast-builder = { version = "0.15.0", path = "../c2rust-ast-builder" }
