Replace homebrew include_md with mdbook feature
mdbook now supports anchors to include partial files, which means we
don't need custom include_md support to include only a portion of the
readme in chapters.

--- a/book.toml
+++ b/book.toml
@@ -4,10 +4,7 @@ src = "manual/"
 
 [build]
 create-missing = false
-preprocess = ["links", "index", "include_md", "generator_dispatch"]
-
-[preprocessor.include_md]
-command = "cargo run --bin mdbook-include_md --quiet --"
+preprocess = ["links", "index"]
 
 [preprocessor.generator_dispatch]
 command = "python3 manual/preprocessors/generator_dispatch.py"
