c2rust-ast-printer: use prettyplease 0.1.9 from crates.io
0.1.9 has support for named C variadics, which we previously worked around in 08f6e88fd469960943ec27d2844e593ff02963b9

--- a/c2rust-ast-printer/Cargo.toml
+++ b/c2rust-ast-printer/Cargo.toml
@@ -11,4 +11,4 @@ description = "Customized version of libsyntax rust pretty-printer"
 log = "0.4"
 syn = { version = "1.0", features = ["full", "proc-macro", "printing"] }
 proc-macro2 = "1.0"
-prettyplease = { path = "../prettyplease" } # = "0.1"
+prettyplease = "0.1.9"
