--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -21,6 +21,7 @@ log = "0.4"
 env_logger = "0.7"
 regex = "1.3"
 shlex = "0.1"
+git-testament = "0.2.1"
 c2rust-transpile = { version = "0.15.1", path = "../c2rust-transpile" }
 
 [build-dependencies]
