Add extra traits to syn
Building c2rust-ast-printer alone requires the "extra-traits" feature of
syn.

--- a/c2rust-ast-builder/Cargo.toml
+++ b/c2rust-ast-builder/Cargo.toml
@@ -12,4 +12,4 @@ description = "Rust AST builder support crate for the C2Rust project"
 
 [dependencies]
 proc-macro2 = { version = "1.0", features = ["span-locations"]}
-syn = { version = "1.0", features = ["full", "proc-macro", "printing"] }
+syn = { version = "1.0", features = ["full", "extra-traits", "printing"]}
