--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -8,6 +8,7 @@ bincode = "1.3"
 c2rust-analysis-rt = { path = "../analysis/runtime"}
 indexed_vec = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
+lazy_static = "1.4"
 
 [package.metadata.rust-analyzer] 
 rustc_private=true
