--- a/c2rust-transpile/Cargo.toml
+++ b/c2rust-transpile/Cargo.toml
@@ -20,7 +20,7 @@ c2rust-bitfields = { version = "0.3.0", path = "../c2rust-bitfields" }
 clap = {version = "2.34", features = ["yaml"]}
 colored = "2.0"
 dtoa = "1.0"
-failure = "0.1.5"
+failure = { version = "0.1.5", default-features = false, features = ["std"] }
 fern = { version = "0.6", features = ["colored"] }
 handlebars = "4.2"
 indexmap = { version = "1.0.1", features = ["serde-1"] }
