Fixed bitfields doctests (now `cargo test` fully works at the top-level besides the bindgen warnings!).
Needed to add `c2rust-bitfields` as a dependency
so that the `#[derive(BitfieldStruct)]` would work.

Duplicated the previous definitions to later doctests
that assumed they were before.

And surrounded the doctest code with a dummy assignment to `_`
so it would compile in main (no return type).

--- a/c2rust-transpile/Cargo.toml
+++ b/c2rust-transpile/Cargo.toml
@@ -16,6 +16,7 @@ edition = "2018"
 c2rust-ast-builder = { version = "0.16.0", path = "../c2rust-ast-builder" }
 c2rust-ast-exporter = { version = "0.16.0", path = "../c2rust-ast-exporter" }
 c2rust-ast-printer = { version = "0.16.0", path = "../c2rust-ast-printer" }
+c2rust-bitfields = { version = "0.3.0", path = "../c2rust-bitfields" }
 clap = {version = "2.34", features = ["yaml"]}
 colored = "2.0"
 dtoa = "1.0"
