Added comment about fix for `cmake-rs` issue landing soon.

--- a/c2rust-ast-exporter/Cargo.toml
+++ b/c2rust-ast-exporter/Cargo.toml
@@ -19,13 +19,14 @@ serde_bytes = "0.11"
 serde_cbor = "0.11"
 
 [build-dependencies]
-# Should be updated once https://github.com/rust-lang/rust-bindgen/pull/2203 lands.
+# Should be updated once https://github.com/rust-lang/rust-bindgen/pull/2203 (5/17/2022) lands.
 # It has already been merged, so I think it should land in the next release.
 # This fixes https://github.com/rust-lang/rust-bindgen/issues/1651,
 # which causes warnings for nullptr derefs (UB) in the generated bindgen tests.
 bindgen = { version = "0.59", features = ["logging"] }
 clang-sys = "1.3"
 # Pinning until https://github.com/rust-lang/cmake-rs/issues/131 is resolved
+# Fixed by https://github.com/rust-lang/cmake-rs/pull/146 on 5/12/2022; waiting for next release.
 cmake = "=0.1.45"
 env_logger = "0.9"
 
