`c2rust_transpile::transpile` can only be called once because it initializes a global, init-once logger. This adds `log_reroute` so that the new logger can be swapped in every time.

--- a/c2rust-transpile/Cargo.toml
+++ b/c2rust-transpile/Cargo.toml
@@ -26,6 +26,7 @@ indexmap = { version = "1.0.1", features = ["serde-1"] }
 itertools = "0.10"
 libc = "0.2"
 log = "0.4"
+log-reroute = "0.1"
 pathdiff = "0.2"
 proc-macro2 = "1.0"
 regex = "1"
