--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -16,6 +16,7 @@ travis-ci = { repository = "immunant/c2rust" }
 azure-devops = { project = "immunant/c2rust", pipeline = "immunant.c2rust", build="1" }
 
 [dependencies]
+anyhow = "1.0"
 clap = {version = "2.34", features = ["yaml"]}
 log = "0.4"
 env_logger = "0.9"
@@ -23,7 +24,9 @@ git-testament = "0.2.1"
 regex = "1.3"
 shlex = "1.1"
 c2rust-transpile = { version = "0.16.0", path = "../c2rust-transpile" }
+c2rust-dynamic-instrumentation = { version = "0.1.0", path = "../dynamic_instrumentation", optional = true }
 
 [features]
 # Force static linking of LLVM
 llvm-static = ["c2rust-transpile/llvm-static"]
+dynamic-instrumentation = ["dep:c2rust-dynamic-instrumentation"]
