--- a/tests/structs/Cargo.toml
+++ b/tests/structs/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "structs-tests"
 version = "0.1.0"
+edition = "2021"
 
 [dependencies]
 c2rust-bitfields = { path = "../../c2rust-bitfields" }
