feature flag for c2rust-instrument binary

--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -26,6 +26,11 @@ shlex = "1.1"
 c2rust-transpile = { version = "0.16.0", path = "../c2rust-transpile" }
 c2rust-dynamic-instrumentation = { version = "0.1.0", path = "../dynamic_instrumentation", optional = true }
 
+
+[[bin]]
+name = "c2rust-instrument"
+required-features = ["dynamic-instrumentation"]
+
 [features]
 # Force static linking of LLVM
 llvm-static = ["c2rust-transpile/llvm-static"]
