Implemented many of the `test_translator.py` tests in Rust.  Still a WIP.
Not sure if it's advantageous enough to move them to Rust vs. Python.

Also, I was hoping to parallelize them all with `rayon`,
but `c2rust` has strange panics and 1 segfault when I tried this.

--- a/c2rust-transpile/Cargo.toml
+++ b/c2rust-transpile/Cargo.toml
@@ -44,3 +44,8 @@ syn = { version = "1.0", features = ["full", "extra-traits", "parsing", "printin
 [features]
 # Force static linking of LLVM
 llvm-static = ["c2rust-ast-exporter/llvm-static"]
+
+[dev-dependencies]
+ignore = "0.4"
+json_compilation_db = "0.3"
+rayon = "1"
