Removed `provision_cross_tests.sh` and split it into `provision_deb.sh` and `provision_rust.sh`.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,6 +27,10 @@ COPY provision*.sh /tmp/
 COPY requirements.txt /tmp/
 RUN chmod +x /tmp/provision*.sh && /tmp/provision.sh
 
+# all targets needed for testing
+ARG TARGETS
+ENV TARGETS="${TARGETS}"
+
 USER $USER
 # Provision rust language and packages (should not run as root)
 ARG RUST_VER
@@ -34,13 +38,8 @@ RUN RUST_VER=$RUST_VER /tmp/provision_rust.sh
 
 ENV PATH="/home/${USER}/.cargo/bin:${PATH}"
 
-ARG TARGETS
-RUN TARGETS="${TARGETS}" /tmp/provision_cross_tests.sh
-
 ENV CARGO_HOME="/tmp/.cargo"
 ENV RUSTUP_HOME="/home/${USER}/.rustup"
 
 # Need to switch back to root for Azure DevOps compatibility
 USER root
-
-RUN /tmp/provision_cross_tests.sh
