--- a/c2rust-ast-builder/Cargo.toml
+++ b/c2rust-ast-builder/Cargo.toml
@@ -9,6 +9,7 @@ license = "BSD-3-Clause"
 homepage = "https://c2rust.com/"
 repository = "https://github.com/immunant/c2rust"
 description = "Rust AST builder support crate for the C2Rust project"
+edition = "2021"
 
 [dependencies]
 proc-macro2 = { version = "1.0", features = ["span-locations"]}
