--- a/c2rust-ast-exporter/Cargo.toml
+++ b/c2rust-ast-exporter/Cargo.toml
@@ -11,6 +11,7 @@ license = "BSD-3-Clause"
 homepage = "https://c2rust.com/"
 repository = "https://github.com/immunant/c2rust"
 description = "Clang AST extraction API for use in the C2Rust project"
+edition = "2021"
 
 [dependencies]
 libc = "0.2"
