--- a/c2rust-refactor/runtime/Cargo.toml
+++ b/c2rust-refactor/runtime/Cargo.toml
@@ -2,6 +2,7 @@
 name = "c2rust_runtime"
 version = "0.1.0"
 authors = ["Stuart Pernsteiner <spernsteiner@galois.com>"]
+edition = "2021"
 
 [dependencies]
 libc = "0.2"
