--- a/tests/longdouble/Cargo.toml
+++ b/tests/longdouble/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "long-double-tests"
 version = "0.1.0"
+edition = "2021"
 
 [dependencies]
-f128 = { git = "https://github.com/jkarns275/f128", rev = "da362b10704a0ab1f05b8aef34156aaf38779116" }
+float128 = { package = "f128", git = "https://github.com/jkarns275/f128", rev = "da362b10704a0ab1f05b8aef34156aaf38779116" }
 num-traits = "0.2.6"
 libc = "0.2"
