--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -8,9 +8,12 @@ bincode = "1.0.1"
 c2rust-analysis-rt = { path = "../analysis/runtime"}
 indexed_vec = "1.2.1"
 serde = { version = "1.0", features = ["derive"] }
-lazy_static = "1.4"
 log = "0.4"
 env_logger = "0.9"
+anyhow = "1"
+
+[build-dependencies]
+anyhow = "1"
 
 [package.metadata.rust-analyzer] 
-rustc_private=true
+rustc_private = true
