Need to actually set the `cjson` variables to nothing, not 0.

--- a/c2rust-ast-exporter/src/tinycbor.config
+++ b/c2rust-ast-exporter/src/tinycbor.config
@@ -1,4 +1,4 @@
 # Disable json2cbor by disabling cjson.
 # We don't need json2cbor and it doesn't compile on BSD.
-system-cjson-pass := 0
-cjson-pass := 0
+system-cjson-pass := 
+cjson-pass := 
