--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.9"
 color-eyre = "0.6"
 fs-err = "2"
 itertools = "0.10"
+indexmap = "1"
 
 [build-dependencies]
 color-eyre = "0.6"
