Trying to fix the remaining `action-slack@v3` `secrets.SLACK_WEBHOOK_URL` CI failure by using `pull_request_target`.

--- a/.github/workflows/internal-testsuite.yml
+++ b/.github/workflows/internal-testsuite.yml
@@ -9,6 +9,8 @@ on:
     branches: [ master, feature/ci-dev ]
   pull_request:
     branches: [ master ]
+  pull_request_target:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
