--- a/c2rust-bitfields-derive/Cargo.toml
+++ b/c2rust-bitfields-derive/Cargo.toml
@@ -13,6 +13,8 @@ description = "C-compatible struct bitfield derive implementation used in the C2
 readme = "README.md"
 
 [dependencies]
+
+itertools = "0.10.3"
 proc-macro2 = "1.0"
 syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
