--- a/analysis/runtime/Cargo.toml
+++ b/analysis/runtime/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.0.1"
-lazy_static = "1.4.0"
+once_cell = "1"
