Switched to a `clap` 3 parser for `c2rust-pdg`.  Now we use named arguments and have nice help and error messages.

--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "1.0.1"
+bincode = "1.0"
 c2rust-analysis-rt = { path = "../analysis/runtime"}
-indexed_vec = "1.2.1"
+indexed_vec = "1.2"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 env_logger = "0.9"
@@ -14,6 +14,7 @@ color-eyre = "0.6"
 fs-err = "2"
 itertools = "0.10"
 linked_hash_set = "0.1"
+clap = { version = "3.2", features = ["derive"] }
 
 [build-dependencies]
 color-eyre = "0.6"
