Don't use `--all-features` with `cargo test` on Arch/Fedora, as that breaks, too.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ jobs:
       export CARGO_HOME=$AGENT_TEMPDIRECTORY/.cargo
       export RUSTFLAGS="-D warnings"
       export RUSTDOCFLAGS="-D warnings"
-      cargo test --release --all-features
+      cargo test --release
     displayName: 'cargo test'
   
   - script: |
