Added a new workspace crate `rustc-private-link` that contains logic for looking up sysroots and linking to rustc private crates, which is currently repeated across many `build.rs`s.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "analysis/runtime",
     "dynamic_instrumentation",
     "pdg",
+    "rustc-private-link",
 ]
 exclude = [
     "cross-checks/pointer-tracer",
