When pretty-printing a `Graph`, instead of the `GraphId` index, print the `Graph`'s hash.
The hash (a `u64`) is turned into a `u32` and then printed as base64 to be succinct.
The reason we print the hash instead of the index is so that `Graph`s remain stable when their position changes,
so when changes cause a new `Graph` to be emitted,
it doesn't cause a snapshot diff on all subsequent `Graph`s, only the new one.

--- a/pdg/Cargo.toml
+++ b/pdg/Cargo.toml
@@ -15,6 +15,7 @@ fs-err = "2"
 itertools = "0.10"
 linked_hash_set = "0.1"
 clap = { version = "3.2", features = ["derive"] }
+base64 = "0.13"
 
 [build-dependencies]
 rustc-private-link = { path = "../rustc-private-link" }
