--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "c2rust",
+    "c2rust-analyze",
     "c2rust-transpile",
     "c2rust-ast-builder",
     "c2rust-ast-exporter",
