--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -10,4 +10,7 @@ polonius-engine = "0.13.0"
 rustc-hash = "1.1.0"
 bitflags = "1.3.2"
 
+[package.metadata.rust-analyzer]
+rustc_private = true
+
 [workspace]
