--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "c2rust-ast-printer",
     "c2rust-bitfields",
     "c2rust-asm-casts",
+    "c2rust-analyze",
     "analysis/runtime",
     "dynamic_instrumentation",
     "pdg",
