--- a/c2rust-ast-builder/Cargo.toml
+++ b/c2rust-ast-builder/Cargo.toml
@@ -13,4 +13,4 @@ edition = "2021"
 
 [dependencies]
 proc-macro2 = { version = "1.0", features = ["span-locations"], default-features = false }
-syn = { version = "1.0", features = ["full", "extra-traits", "printing"], default-features = false }
+syn = { version = "1.0", features = ["full", "extra-traits", "printing", "clone-impls"], default-features = false }
