--- a/c2rust-analyze/Cargo.toml
+++ b/c2rust-analyze/Cargo.toml
@@ -10,5 +10,9 @@ polonius-engine = "0.13.0"
 rustc-hash = "1.1.0"
 bitflags = "1.3.2"
 
+[build-dependencies]
+rustc-private-link = { path = "../rustc-private-link" }
+print_bytes = "0.6"
+
 [package.metadata.rust-analyzer]
 rustc_private = true
