--- a/dynamic_instrumentation/Cargo.toml
+++ b/dynamic_instrumentation/Cargo.toml
@@ -12,6 +12,14 @@ cargo-util = "0.1"
 indexmap = "1.8"
 lazy_static = "1.4"
 log = "0.4"
+env_logger = "0.9"
+color-eyre = "0.6"
+fs-err = "2"
+clap = { version = "3.2", features = ["derive"] }
+cargo_metadata = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+camino = "1.0"
 
 [build-dependencies]
 rustc-private-link = { path = "../rustc-private-link" }
