--- a/analysis/test/Cargo.toml
+++ b/analysis/test/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-c2rust-analysis-rt = { path = "../../analysis/runtime"}
+c2rust-analysis-rt = { path = "../../analysis/runtime", optional = true }
