Add a `--runtime` argument, which is used by `cargo add c2rust-analysis-rt` instead of the user having to manually do it.  However, we have to use `+stable` as `cargo add` was added in 1.62 (on 1.60 now, but upgrading in https://github.com/immunant/c2rust/pull/513).

--- a/analysis/test/Cargo.toml
+++ b/analysis/test/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-c2rust-analysis-rt = { path = "../../analysis/runtime", optional = true }
+c2rust-analysis-rt = { path = "../runtime", optional = true, version = "0.1.0" }
