Revert part of https://github.com/immunant/c2rust/commit/b971ab5d3cadaaa112bb4b51a9e22fa1504352fc (part of https://github.com/immunant/c2rust/pull/526) in an attempt to fix https://github.com/immunant/c2rust/issues/569.

--- a/c2rust-ast-exporter/Cargo.toml
+++ b/c2rust-ast-exporter/Cargo.toml
@@ -20,7 +20,7 @@ serde_bytes = "0.11"
 serde_cbor = "0.11"
 
 [build-dependencies]
-bindgen = { version = "0.60", features = ["logging"], default-features = false }
+bindgen = { version = "0.60", features = ["logging"] }
 clang-sys = "1.3"
 # Pinning until https://github.com/rust-lang/cmake-rs/issues/131 is resolved
 # Fixed by https://github.com/rust-lang/cmake-rs/pull/146 on 5/12/2022; waiting for next release.
