--- a/c2rust/Cargo.toml
+++ b/c2rust/Cargo.toml
@@ -18,10 +18,12 @@ azure-devops = { project = "immunant/c2rust", pipeline = "immunant.c2rust", buil
 
 [dependencies]
 anyhow = "1.0"
-clap = {version = "2.34", features = ["yaml"]}
-log = "0.4"
+camino = "1.0"
+clap = { version = "2.34", features = ["yaml"] }
 env_logger = "0.9"
 git-testament = "0.2.1"
+is_executable = "1.0"
+log = "0.4"
 regex = "1.3"
 shlex = "1.1"
 c2rust-transpile = { version = "0.16.0", path = "../c2rust-transpile" }
