--- a/dynamic_instrumentation/Cargo.toml
+++ b/dynamic_instrumentation/Cargo.toml
@@ -15,6 +15,9 @@ fs-err = "2"
 clap = { version = "3.2", features = ["derive"] }
 cargo_metadata = "0.15"
 camino = "1.0"
+# Used for parsing `rust-toolchain.toml`.
+# We don't need to edit at all, but `cargo` uses `toml-edit`, so we want to match it.
+toml_edit = "0.14"
 
 [build-dependencies]
 rustc-private-link = { path = "../rustc-private-link" }
